<?xml version="1.0"?>
<package>
    <name>yesense_imu</name>
    <version>17.11.27</version>
    <description>A ROS Driver for Yesense by using serial</description>

    <maintainer email="wangzhe936@outlook.com">Zhe Wang</maintainer>
    <author>Zhe Wang</author>

    <license>BSD</license>


    <!-- list depending package -->
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msg</build_depend>
    <build_depend>message_runtime</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msg</run_depend>
    <run_depend>message_runtime</run_depend>

    <buildtool_depend>catkin</buildtool_depend>

</package>
